Fix user name wrapping in chat body

--- a/palyglot/frontend/src/css/Chat.css
+++ b/palyglot/frontend/src/css/Chat.css
@@ -42,6 +42,7 @@
   border-radius: 10px;
   background-color: #ffd966;
   margin-bottom: 30px;
+  white-space: nowrap;
 }
 
 .chat_receiver {
